Workbench screnspace cavity not rendered in batch through command line #96243

Closed
opened 2022-03-08 17:26:57 +01:00 by Ivan Cappiello · 10 comments
Member

System Information
Operating system: macOS-12.2.1-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.103

Blender Version
Broken: version: 2.93.7, branch: master, commit date: 2021-12-14 16:35, hash: a5b7f9dc90
Worked: N.A.

Short description of error
when rendering in batch through command line workbench screnspace cavity is not rendered in the output image. Worldspace cavity seems to render fine though

Exact steps for others to reproduce the error
render attached test_SSC.blend file through command line
(ex: blender -b test_SSC.blend -E BLENDER_WORKBENCH -o //render_ -F PNG -x 1 -a)
output images will not include cavity at all

render_0001.png

doing the same with test_WSC.blend will output images with cavity
(ex: blender -b test_WSC.blend -E BLENDER_WORKBENCH -o //render_ -F PNG -x 1 -a)

render_0001.png

test_SSC.blend

test_WSC.blend

**System Information** Operating system: macOS-12.2.1-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.103 **Blender Version** Broken: version: 2.93.7, branch: master, commit date: 2021-12-14 16:35, hash: `a5b7f9dc90` Worked: N.A. **Short description of error** when rendering in batch through command line workbench screnspace cavity is not rendered in the output image. Worldspace cavity seems to render fine though **Exact steps for others to reproduce the error** render attached test_SSC.blend file through command line (ex: blender -b test_SSC.blend -E BLENDER_WORKBENCH -o //render_ -F PNG -x 1 -a) output images will not include cavity at all ![render_0001.png](https://archive.blender.org/developer/F12908484/render_0001.png) doing the same with test_WSC.blend will output images with cavity (ex: blender -b test_WSC.blend -E BLENDER_WORKBENCH -o //render_ -F PNG -x 1 -a) ![render_0001.png](https://archive.blender.org/developer/F12908494/render_0001.png) [test_SSC.blend](https://archive.blender.org/developer/F12908461/test_SSC.blend) [test_WSC.blend](https://archive.blender.org/developer/F12908463/test_WSC.blend)
Author
Member

Added subscriber: @icappiello

Added subscriber: @icappiello
Author
Member
Added subscribers: @CorradoPiscitelli, @Jeroen-Bakker, @fclem
Author
Member

Added subscriber: @fsiddi

Added subscriber: @fsiddi
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I can confirm. Same output I got until 2.83 (That's the oldest version I've)
render_0035.png

I can confirm. Same output I got until 2.83 (That's the oldest version I've) ![render_0035.png](https://archive.blender.org/developer/F12912071/render_0035.png)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jeroen Bakker self-assigned this 2022-03-09 12:48:34 +01:00
Member

Something I want to look into upcoming week.

Something I want to look into upcoming week.

This issue was referenced by b6039cd82f

This issue was referenced by b6039cd82fd0ac04fba604694f8694b1e95afe09

This issue was referenced by 9097c97767

This issue was referenced by 9097c9776798a56b48d148cf614750ecedfdfe3d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96243
No description provided.